# Plugin

./: .gitmodules  CMakeLists.txt  README.md  pawn.json
src/: CMakeLists.txt  amxexecutor.cpp  amxexecutor.h  amxopcode.h  amxstacktrace.cpp  crashdetect.cpp  crashdetect.h  debugplugin.cpp  debugplugin.h  log.cpp  natives.cpp  network.cpp  network.h  networkconnection.cpp  networkconnection.h  os-win32.cpp  plugin.cpp  safequeue.h
src/proto/: CMakeLists.txt  response.proto  task.proto
tests/: CMakeLists.txt
